@@ -10,269 +10,338 @@ import net.sf.jsignpdf.types.CertificationLevel;
  * 
  * @author Josef Cacek
  * @author $Author: stojsavljevic $
- * @version $Revision: 1.7 $
- * @created $Date: 2011/04/01 10:57:51 $
+ * @version $Revision: 1.8 $
+ * @created $Date: 2011/04/06 08:16:34 $
  */
 public class SignatureVerification {
 
-    /**
-     * Signed revision has been altered.
-     */
-    public static final Integer SIG_STAT_CODE_ERROR_REVISION_MODIFIED = new Integer(10);
+	/**
+	 * Signed revision has been altered.
+	 */
+	public static final Integer SIG_STAT_CODE_ERROR_REVISION_MODIFIED = new Integer(10);
 
-    /**
-     * Revision has set certification level but document was modified later.
-     */
-    public static final Integer SIG_STAT_CODE_ERROR_CERTIFICATION_BROKEN = new Integer(11);
+	/**
+	 * Revision has set certification level but document was modified later.
+	 */
+	public static final Integer SIG_STAT_CODE_ERROR_CERTIFICATION_BROKEN = new Integer(11);
 
-    /**
-     * There is some unsigned content in document (last signature doesn't cover
-     * whole document).
-     */
-    public static final Integer SIG_STAT_CODE_WARNING_UNSIGNED_CONTENT = new Integer(20);
+	/**
+	 * There is some unsigned content in document (last signature doesn't cover
+	 * whole document).
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_UNSIGNED_CONTENT = new Integer(20);
 
-    /**
-     * Signature validity can't be verified.
-     */
-    public static final Integer SIG_STAT_CODE_WARNING_SIGNATURE_VALIDITY_UNKNOWN = new Integer(21);
+	/**
+	 * Signature validity can't be verified.
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_SIGNATURE_VALIDITY_UNKNOWN = new Integer(21);
 
-    /**
-     * Signature is invalid according to OCSP.
-     */
-    public static final Integer SIG_STAT_CODE_WARNING_SIGNATURE_OCSP_INVALID = new Integer(22);
+	/**
+	 * Signature is invalid according to OCSP.
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_SIGNATURE_OCSP_INVALID = new Integer(22);
 
-    /**
-     * There is no timestamp token (signature date/time are from the clock on
-     * the signer's computer)
-     */
-    public static final Integer SIG_STAT_CODE_WARNING_NO_TIMESTAMP_TOKEN = new Integer(23);
+	/**
+	 * There is no timestamp token (signature date/time are from the clock on
+	 * the signer's computer)
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_NO_TIMESTAMP_TOKEN = new Integer(23);
 
-    /**
-     * Timestamp token is invalid.
-     */
-    public static final Integer SIG_STAT_CODE_WARNING_TIMESTAMP_INVALID = new Integer(24);
+	/**
+	 * Timestamp token is invalid.
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_TIMESTAMP_INVALID = new Integer(24);
 
-    /**
-     * Signature is valid.
-     */
-    public static final Integer SIG_STAT_CODE_INFO_SIGNATURE_VALID = new Integer(30);
+	/**
+	 * No revocation information (CRL or OCSP) found.
+	 */
+	public static final Integer SIG_STAT_CODE_WARNING_NO_REVOCATION_INFO = new Integer(25);
 
-    private String signName;
-    private String name;
-    private String subject;
-    private int revision;
-    private boolean wholeDocument;
-    private Calendar date;
-    private boolean modified;
-    private boolean ocspPresent;
-    private boolean ocspValid;
-    private boolean tsTokenPresent;
-    private Exception tsTokenValidationResult;
-    private Object[] fails;
-    private String reason;
-    private String location;
-    private int certLevelCode;
+	/**
+	 * Signature is valid.
+	 */
+	public static final Integer SIG_STAT_CODE_INFO_SIGNATURE_VALID = new Integer(30);
 
-    /**
-     * This flag means that signing certificate is directly trusted (regarding
-     * to chosen KeyStore) and valid (it's not expired and doesn't appear in
-     * CRL).
-     */
-    private boolean signCertTrustedAndValid;
+	private String signName;
+	private String name;
+	private String subject;
+	private int revision;
+	private boolean wholeDocument;
+	private Calendar date;
+	private boolean modified;
+	private boolean ocspPresent;
+	private boolean ocspValid;
+	private boolean crlPresent;
+	private boolean tsTokenPresent;
+	private Exception tsTokenValidationResult;
+	private Object[] fails;
+	private String reason;
+	private String location;
+	private int certLevelCode;
 
-    /**
-     * Default constructore
-     */
-    public SignatureVerification() {
-        //nothing to do here
-    }
+	/**
+	 * This flag means that signing certificate is directly trusted (regarding
+	 * to chosen KeyStore) and valid (it's not expired and doesn't appear in
+	 * CRL).
+	 */
+	private boolean signCertTrustedAndValid;
 
-    /**
-     * Constructor, which fills name of signature
-     * 
-     * @param aName
-     *            name of signature
-     */
-    public SignatureVerification(final String aName) {
-        name = aName;
-    }
+	/**
+	 * This flag means that OCSP url is found in signing certificate.
+	 */
+	private boolean ocspInCertPresent;
 
-    public String getName() {
-        return name;
-    }
+	/**
+	 * This flag is true if OCSP url is found in signing certificate (
+	 * <code>ocspInCertPresent</code> is true) and certificate is successfully
+	 * validated against that url.
+	 */
+	private boolean ocspInCertValid;
 
-    public void setName(String name) {
-        this.name = name;
-    }
+	/**
+	 * Default constructore
+	 */
+	public SignatureVerification() {
+		//nothing to do here
+	}
 
-    public String getSubject() {
-        return subject;
-    }
+	/**
+	 * Constructor, which fills name of signature
+	 * 
+	 * @param aName
+	 *            name of signature
+	 */
+	public SignatureVerification(final String aName) {
+		name = aName;
+	}
 
-    public void setSubject(String subject) {
-        this.subject = subject;
-    }
+	public String getName() {
+		return name;
+	}
 
-    public int getRevision() {
-        return revision;
-    }
+	public void setName(String name) {
+		this.name = name;
+	}
 
-    public void setRevision(int revision) {
-        this.revision = revision;
-    }
+	public String getSubject() {
+		return subject;
+	}
 
-    public boolean isWholeDocument() {
-        return wholeDocument;
-    }
+	public void setSubject(String subject) {
+		this.subject = subject;
+	}
 
-    public void setWholeDocument(boolean wholeDocument) {
-        this.wholeDocument = wholeDocument;
-    }
+	public int getRevision() {
+		return revision;
+	}
 
-    public Calendar getDate() {
-        return date;
-    }
+	public void setRevision(int revision) {
+		this.revision = revision;
+	}
 
-    public void setDate(Calendar date) {
-        this.date = date;
-    }
+	public boolean isWholeDocument() {
+		return wholeDocument;
+	}
 
-    public boolean isModified() {
-        return modified;
-    }
+	public void setWholeDocument(boolean wholeDocument) {
+		this.wholeDocument = wholeDocument;
+	}
 
-    public void setModified(boolean modified) {
-        this.modified = modified;
-    }
+	public Calendar getDate() {
+		return date;
+	}
 
-    public Object[] getFails() {
-        return fails;
-    }
+	public void setDate(Calendar date) {
+		this.date = date;
+	}
 
-    public void setFails(Object[] fails) {
-        this.fails = fails;
-    }
+	public boolean isModified() {
+		return modified;
+	}
 
-    public String getLocation() {
-        return location;
-    }
+	public void setModified(boolean modified) {
+		this.modified = modified;
+	}
 
-    public void setLocation(String location) {
-        this.location = location;
-    }
+	public Object[] getFails() {
+		return fails;
+	}
 
-    public String getReason() {
-        return reason;
-    }
+	public void setFails(Object[] fails) {
+		this.fails = fails;
+	}
 
-    public void setReason(String reason) {
-        this.reason = reason;
-    }
+	public String getLocation() {
+		return location;
+	}
 
-    public boolean isOcspPresent() {
-        return ocspPresent;
-    }
+	public void setLocation(String location) {
+		this.location = location;
+	}
 
-    public void setOcspPresent(boolean ocspPresent) {
-        this.ocspPresent = ocspPresent;
-    }
+	public String getReason() {
+		return reason;
+	}
 
-    public boolean isOcspValid() {
-        return ocspValid;
-    }
+	public void setReason(String reason) {
+		this.reason = reason;
+	}
 
-    public void setOcspValid(boolean ocspValid) {
-        this.ocspValid = ocspValid;
-    }
+	public boolean isOcspPresent() {
+		return ocspPresent;
+	}
 
-    public String getSignName() {
-        return signName;
-    }
+	public void setOcspPresent(boolean ocspPresent) {
+		this.ocspPresent = ocspPresent;
+	}
 
-    public void setSignName(String signName) {
-        this.signName = signName;
-    }
+	public boolean isOcspValid() {
+		return ocspValid;
+	}
 
-    /**
-     * @return the tsTokenPresent
-     */
-    public boolean isTsTokenPresent() {
-        return tsTokenPresent;
-    }
+	public void setOcspValid(boolean ocspValid) {
+		this.ocspValid = ocspValid;
+	}
 
-    /**
-     * @param tsTokenPresent
-     *            the tsTokenPresent to set
-     */
-    public void setTsTokenPresent(boolean tsTokenPresent) {
-        this.tsTokenPresent = tsTokenPresent;
-    }
+	public String getSignName() {
+		return signName;
+	}
 
-    /**
-     * @return the tsTokenValidationResult
-     */
-    public Exception getTsTokenValidationResult() {
-        return tsTokenValidationResult;
-    }
+	public void setSignName(String signName) {
+		this.signName = signName;
+	}
 
-    /**
-     * @param tsTokenValidationResult
-     *            the tsTokenValidationResult to set
-     */
-    public void setTsTokenValidationResult(Exception tsTokenValidationResult) {
-        this.tsTokenValidationResult = tsTokenValidationResult;
-    }
+	/**
+	 * @return the tsTokenPresent
+	 */
+	public boolean isTsTokenPresent() {
+		return tsTokenPresent;
+	}
 
-    /**
-     * @return the certLevelCode
-     */
-    public int getCertLevelCode() {
-        return certLevelCode;
-    }
+	/**
+	 * @param tsTokenPresent
+	 *            the tsTokenPresent to set
+	 */
+	public void setTsTokenPresent(boolean tsTokenPresent) {
+		this.tsTokenPresent = tsTokenPresent;
+	}
 
-    /**
-     * @param certLevelCode
-     *            the certLevelCode to set
-     */
-    public void setCertLevelCode(int certLevelCode) {
-        this.certLevelCode = certLevelCode;
-    }
+	/**
+	 * @return the tsTokenValidationResult
+	 */
+	public Exception getTsTokenValidationResult() {
+		return tsTokenValidationResult;
+	}
 
-    /**
-     * Returns instance of {@link CertificationLevel} for the property
-     * certLevelCode.
-     * 
-     * @return
-     */
-    public CertificationLevel getCertificationLevel() {
-        return CertificationLevel.findCertificationLevel(certLevelCode);
-    }
+	/**
+	 * @param tsTokenValidationResult
+	 *            the tsTokenValidationResult to set
+	 */
+	public void setTsTokenValidationResult(Exception tsTokenValidationResult) {
+		this.tsTokenValidationResult = tsTokenValidationResult;
+	}
 
-    /**
-     * 
-     * @return the signCertTrustedAndValid
-     */
-    public boolean isSignCertTrustedAndValid() {
-        return signCertTrustedAndValid;
-    }
+	/**
+	 * @return the certLevelCode
+	 */
+	public int getCertLevelCode() {
+		return certLevelCode;
+	}
 
-    /**
-     * @param signCertTrustedAndValid
-     *            the signCertTrustedAndValid to set
-     */
-    public void setSignCertTrustedAndValid(boolean signCertTrustedAndValid) {
-        this.signCertTrustedAndValid = signCertTrustedAndValid;
-    }
+	/**
+	 * @param certLevelCode
+	 *            the certLevelCode to set
+	 */
+	public void setCertLevelCode(int certLevelCode) {
+		this.certLevelCode = certLevelCode;
+	}
 
-    public String toString() {
-        return "Signature verification [" + "\n signName=" + signName + "\n name=" + name + "\n subject=" + subject
-                + "\n date=" + date.getTime() + "\n reason=" + reason + "\n location=" + location + "\n revision="
-                + revision + "\n wholeDocument=" + wholeDocument + "\n modified=" + modified + "\n certificationLevel="
-                + getCertificationLevel().name() + "\n signCertTrustedAndValid=" + signCertTrustedAndValid
-                + "\n ocspPresent=" + ocspPresent + "\n ocspValid=" + ocspValid + "\n timeStampTokenPresent="
-                + tsTokenPresent + "\n timeStampTokenValidationFail="
-                + (tsTokenValidationResult == null ? "no" : tsTokenValidationResult.getMessage()) + "\n fails="
-                + (fails == null ? "no" : Arrays.asList(fails)) + "\n]";
-    }
+	/**
+	 * Returns instance of {@link CertificationLevel} for the property
+	 * certLevelCode.
+	 * 
+	 * @return
+	 */
+	public CertificationLevel getCertificationLevel() {
+		return CertificationLevel.findCertificationLevel(certLevelCode);
+	}
+
+	/**
+	 * 
+	 * @return the signCertTrustedAndValid
+	 */
+	public boolean isSignCertTrustedAndValid() {
+		return signCertTrustedAndValid;
+	}
+
+	/**
+	 * @param signCertTrustedAndValid
+	 *            the signCertTrustedAndValid to set
+	 */
+	public void setSignCertTrustedAndValid(boolean signCertTrustedAndValid) {
+		this.signCertTrustedAndValid = signCertTrustedAndValid;
+	}
+
+	/**
+	 * 
+	 * @return the crlPresent
+	 */
+	public boolean isCrlPresent() {
+		return crlPresent;
+	}
+
+	/**
+	 * @param crlPresent
+	 *            the crlPresent to set
+	 */
+	public void setCrlPresent(boolean crlPresent) {
+		this.crlPresent = crlPresent;
+	}
+
+	/**
+	 * 
+	 * @return the ocspInCertPresent
+	 */
+	public boolean isOcspInCertPresent() {
+		return ocspInCertPresent;
+	}
+
+	/**
+	 * 
+	 * @param ocspInCertPresent
+	 *            the ocspInCertPresent to set
+	 */
+	public void setOcspInCertPresent(boolean ocspInCertPresent) {
+		this.ocspInCertPresent = ocspInCertPresent;
+	}
+
+	/**
+	 * 
+	 * @return the ocspInCertValid
+	 */
+	public boolean isOcspInCertValid() {
+		return ocspInCertValid;
+	}
+
+	/**
+	 * 
+	 * @param ocspInCertValid
+	 *            the ocspInCertValid to set
+	 */
+	public void setOcspInCertValid(boolean ocspInCertValid) {
+		this.ocspInCertValid = ocspInCertValid;
+	}
+
+	public String toString() {
+		return "Signature verification [" + "\n signName=" + signName + "\n name=" + name + "\n subject=" + subject
+				+ "\n date=" + date.getTime() + "\n reason=" + reason + "\n location=" + location + "\n revision="
+				+ revision + "\n wholeDocument=" + wholeDocument + "\n modified=" + modified + "\n certificationLevel="
+				+ getCertificationLevel().name() + "\n signCertTrustedAndValid=" + signCertTrustedAndValid
+				+ "\n ocspPresent=" + ocspPresent + "\n ocspValid=" + ocspValid + "\n crlPresent=" + crlPresent
+				+ "\n ocspInCertPresent=" + ocspInCertPresent + "\n ocspInCertValid=" + ocspInCertValid
+				+ "\n timeStampTokenPresent=" + tsTokenPresent + "\n timeStampTokenValidationFail="
+				+ (tsTokenValidationResult == null ? "no" : tsTokenValidationResult.getMessage()) + "\n fails="
+				+ (fails == null ? "no" : Arrays.asList(fails)) + "\n]";
+	}
 
 }
